--- a/Explore/Versioned_Project/Versioned_Folder/.Versioned Mapping - Rename renamed.DTEMPLATE.json
+++ b/Explore/Versioned_Project/Versioned_Folder/.Versioned Mapping - Rename renamed.DTEMPLATE.json
@@ -1,7 +1,7 @@
 {
   "objectInfo" : {
     "id" : "fcRxZx9CRiMkYjgwYHHbgz",
-    "name" : "Versioned Mapping - Rename",
+    "name" : "Versioned Mapping - Rename renamed",
     "type" : "DTEMPLATE",
     "metadata" : {
       "modelVersion" : {
@@ -23,6 +23,6 @@
     }
   },
   "dataFileExtension" : "zip",
-  "updateTime" : "2023-08-07T08:02:36.455Z",
+  "updateTime" : "2023-08-07T08:03:29.294Z",
   "objectRefs" : [ ]
 }
