--- a/Explore/Versioned_Project_Renamed/.Versioned_Project_Renamed.Project.json
+++ b/Explore/Versioned_Project_Renamed/.Versioned_Project_Renamed.Project.json
@@ -1,7 +1,7 @@
 {
   "objectInfo" : {
     "id" : "8re92BWkkUlcydZvhw76oe",
-    "name" : "Versioned_Project",
+    "name" : "Versioned_Project_Renamed",
     "type" : "Project",
     "metadata" : {
       "modelVersion" : {
@@ -18,6 +18,6 @@
     }
   },
   "dataFileExtension" : "json",
-  "updateTime" : "2023-08-07T08:02:23.040Z",
+  "updateTime" : "2023-08-07T08:03:59.021Z",
   "objectRefs" : [ ]
 }
